# T1GPU

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Geometry/: CMakeLists.txt
Geometry/inc/: Poligono.hpp  Punto.hpp  TwoDPoint.hpp  Vector.hpp
GeometryTest/: CMakeLists.txt  PoligonoFloatTest.cpp  PoligonoListFloatTest.cpp  PuntoFloatTest.cpp  PuntoTest.cpp  VectorFloatTest.cpp
